--- a/src/main/resources/url.yml
+++ b/src/main/resources/url.yml
@@ -1,7 +1,7 @@
 football-data:
-  api: https://api.football-data.org
+  domain: https://api.football-data.org
 
 ---
 football-data:
   teams:
-    matches: /v4/teams/{id}/matches?competitions=PL
+    matches: {football-data.domain}/v4/teams/{id}/matches
