--- a/src/main/resources/core.yml
+++ b/src/main/resources/core.yml
@@ -1,5 +1,5 @@
 spring:
   config:
     import:
-      - classpath: url.yml
-      - classpath: application.yml
+      - classpath:url.yml
+      - classpath:team.yml
