순위표 목록 조회 APi 개발중..
- restDocs 마무리해야 함
- 클래스 네이밍 고민

--- a/hedoLeague-api-server/build.gradle
+++ b/hedoLeague-api-server/build.gradle
@@ -1,2 +1,22 @@
 
-dependencies {}
+
+ext {
+    set('snippetsDir', file("build/generated-snippets"))
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+    asciidoctorExt
+}
+
+dependencies {
+    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.6.RELEASE'
+}
+
+asciidoctor {
+    inputs.dir snippetsDir
+    configurations 'asciidoctorExt'
+    dependsOn test
+}
