--- a/hedoLeague-core/build.gradle
+++ b/hedoLeague-core/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 }
 bootJar {
     enabled = false
