--- a/hedoLeague-api/build.gradle
+++ b/hedoLeague-api/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.11'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-//    id 'org.asciidoctor.jvm.convert'
 }
 
 group = 'com.hedoleague'
@@ -13,31 +12,15 @@ repositories {
     mavenCentral()
 }
 
-//ext {
-//    set('snippetsDir', file("build/generated-snippets"))
-//}
-//
-//configurations {
-//    asciidoctorExt
-//}
-
-//tasks.named('asciidoctor') {
-//    inputs.dir snippetsDir
-//    dependsOn test
-//}
-//
-//asciidoctor {
-//    inputs.dir snippetsDir
-//    configurations 'asciidoctorExt'
-//    dependsOn test
-//}
-
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     implementation project(':hedoLeague-core')
-//    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.6.RELEASE'
-//    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+    // test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
-
-
-
-
