--- a/hedoLeague-core/build.gradle
+++ b/hedoLeague-core/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.projectlombok:lombok'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
     annotationProcessor 'org.projectlombok:lombok'
 
     // test
